--- a/data/app_config.json
+++ b/data/app_config.json
@@ -16,6 +16,11 @@
       "levels": [0,1,2,3,4,5]
     },
     {
+      "fullname": "rhealpix",
+      "name": "rhealpix",
+      "levels": [0,1,2,3,4]
+    },
+    {
       "fullname": "DGGRID ISEA3H",
       "name": "ISEA3H",
       "levels": [1,2,3,4,5]
@@ -26,6 +31,11 @@
       "levels": [1,2,3,4,5]
     },
     {
+      "fullname": "DGGRID ISEA7H",
+      "name": "ISEA7H",
+      "levels": [1,2,3,4]
+    },
+    {
       "fullname": "DGGRID ISEA4D",
       "name": "ISEA4D",
       "levels": [1,2,3,4,5]
@@ -34,11 +44,6 @@
       "fullname": "DGGRID ISEA4T",
       "name": "ISEA4T",
       "levels": [1,2,3,4,5]
-    },
-    {
-      "fullname": "rhealpix",
-      "name": "rhealpix",
-      "levels": [0,1,2,3,4]
     }
   ]
 }
